updated to python 3.6.2

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
 coverage==4.4.1
+cycler==0.10.0
 decorator==4.1.2
 defusedxml==0.5.0
 Flask==0.12.2
@@ -17,19 +18,25 @@ Flask-WhooshAlchemy==0.56
 Flask-WTF==0.14.2
 flipflop==1.0
 guess-language==0.2
+gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+matplotlib==2.0.2
 numpy==1.13.1
 pandas==0.20.3
 pbr==3.1.1
+pyparsing==2.2.0
 python-dateutil==2.6.1
 python3-openid==3.1.0
 pytz==2017.2
 PyYAML==3.12
 requests==2.18.4
-six==1.10.0
+scikit-learn==0.19.0
+scipy==0.19.1
+seaborn==0.8.1
+six==1.11.0
 SQLAlchemy==1.1.14
 sqlalchemy-migrate==0.11.0
 sqlparse==0.2.3
