--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Babel==2.5.1
 blinker==1.4
-bokeh==0.12.5
+bokeh==0.12.9
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
@@ -13,7 +13,7 @@ Flask-Babel==0.11.2
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-OpenID==1.2.5
-Flask-SQLAlchemy==2.2
+Flask-SQLAlchemy==2.3.1
 Flask-WhooshAlchemy==0.56
 Flask-WTF==0.14.2
 flipflop==1.0
@@ -22,9 +22,10 @@ gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
+mailchimp3==2.0.18
 MarkupSafe==1.0
-matplotlib==2.0.2
-numpy==1.13.1
+matplotlib==2.1.0
+numpy==1.13.3
 pandas==0.20.3
 pbr==3.1.1
 pyparsing==2.2.0
@@ -39,7 +40,7 @@ seaborn==0.8.1
 six==1.11.0
 SQLAlchemy==1.1.14
 sqlalchemy-migrate==0.11.0
-sqlparse==0.2.3
+sqlparse==0.2.4
 Tempita==0.5.2
 tornado==4.5.2
 urllib3==1.22
